# py-lclg-prompt-xml-strategies

./: README.md  hello.py  pyproject.toml
examples/: conversational_example.json
src/lclg/simple-agent-langgraph/: README.md  main.py  pyproject.toml
src/lclg/single-agent-create-car/: .env.example  README.md  cli.py  logging.conf  pyproject.toml  pytest.ini
src/lclg/single-agent-create-car-looping/: IMPLEMENTATION_SUMMARY.md  INTERACTIVE_FEATURE.md  QUICK_START.md  README.md  REFACTORING_SUMMARY.md  cli.py  pyproject.toml
src/lclg/single-agent-create-car-looping-memory/: CHANGELOG.md  MEMORY_DEMONSTRATION_RESULTS.md  MEMORY_REFACTORING_GUIDE.md  QUICKSTART.md  REFACTORING_SUMMARY.md  TEST_COVERAGE_SUMMARY.md  XML_DEMONSTRATION_RESULTS.md  car_configuration_20251106_145609.json  car_configuration_20251106_145609.xml  cli.py  demo_memory_system.py  demo_xml_output.py  demo_xml_quick.py  memory_state_20251106_145609.json  pyproject.toml  test_memory_refactor.py
src/lclg/single-agent-create-car-looping-memory/examples/: sample_requirements.json
src/lclg/single-agent-create-car-looping-memory/schema/multi/types/: electrical-system-enum.json
src/lclg/single-agent-create-car-looping-memory/src/: __init__.py  single_agent_system.py
src/lclg/single-agent-create-car-looping-memory/src/agents/: __init__.py  base_agent.py  car_agent.py
src/lclg/single-agent-create-car-looping-memory/src/memory/: __init__.py  memory_manager.py
src/lclg/single-agent-create-car-looping-memory/src/prompts/: prompts.py
src/lclg/single-agent-create-car-looping-memory/src/tools/: tire_tools.py
src/lclg/single-agent-create-car-looping-memory/tests/: conftest.py
src/lclg/single-agent-create-car-looping-memory/tests/integration/: __init__.py  test_memory_integration.py
src/lclg/single-agent-create-car-looping-memory/tests/unit/: __init__.py  test_base_agent.py  test_interactive_feature.py  test_memory_manager.py
src/lclg/single-agent-create-car-looping/docs/: DUAL_MESSAGE_SYSTEM.md
src/lclg/single-agent-create-car/schema/multi/types/: body-style-enum.json  electrical-type.json
src/lclg/single-agent-create-car/schema/single/: car.json
src/lclg/single-agent-create-car/src/agents/: base_agent.py  car_agent.py
src/lclg/single-agent-create-car/src/llm/: __init__.py  ollama_llm.py  standalone_ollama.py
src/lclg/single-agent-create-car/src/prompts/: prompts.py  schema_loader.py
src/lclg/single-agent-create-car/src/tools/: engine_tools.py
src/lclg/single-agent-create-car/src/utils/: logging_config.py
src/lclg/single-agent-create-car/tests/: conftest.py
src/lclg/single-agent-create-car/tests/integration/: test_integration.py
src/lclg/single-agent-create-car/tests/unit/: test_base_agent.py  test_car_agent.py  test_cli.py  test_logging_config.py
src/lclg/single-agent-create-car/tests/unit/tools/: test_engine_tools.py
src/lclg/supervisor-multi-agent/: Makefile  README.md  demo.py  example_prompts.py  examples.py  main.py  pyproject.toml  test_basic.py  test_complex_coordination.py  test_system.py  uv_setup.py
src/lclg/supervisor-multi-agent-create-car/: README.md  cli.py  pyproject.toml  test_output.json  test_output_debug.json  test_schema_prompts.py
src/lclg/supervisor-multi-agent-create-car/schema/multi/types/: body-type.json  car-type.json  fuel-type-enum.json  material-enum.json
src/lclg/supervisor-multi-agent-create-car/src/: __init__.py
src/lclg/supervisor-multi-agent-create-car/src/agents/: __init__.py  base_agent.py  body_agent.py  electrical_agent.py  engine_agent.py  multi_agent_system.py  supervisor_agent.py  tire_agent.py
src/lclg/supervisor-multi-agent-create-car/src/llm/: ollama_llm.py
src/lclg/supervisor-multi-agent-create-car/src/prompts/: __init__.py  prompts.py  prompts_from_json_schema.py
src/lclg/supervisor-multi-agent-create-car/src/tests/: __init__.py  test_basic_functionality.py
src/lclg/supervisor-multi-agent-create-car/src/tools/: __init__.py  body_tools.py  engine_tools.py  tire_tools.py
src/lclg/supervisor-multi-agent-create-car/tests/: __init__.py  conftest.py  test_schema_functionality.py
src/lclg/supervisor-multi-agent-create-car/tests/integration/: test_schema_integration.py
src/lclg/supervisor-multi-agent-create-car/tests/unit/: test_base_agent.py  test_multi_agent_system.py  test_prompts_from_json_schema.py  test_schema_loader.py
src/lclg/supervisor-multi-agent-create-car/tests/unit/agents/: test_basic_agent_functionality.py
src/lclg/supervisor-multi-agent-create-car/tests/unit/llm/: test_ollama_llm.py
src/lclg/supervisor-multi-agent-create-car/tests/unit/tools/: test_body_tools.py  test_electrical_tools.py  test_engine_tools.py  test_tire_tools.py
src/lclg/supervisor-multi-agent/src/: main.py
src/lclg/supervisor-multi-agent/src/agents/: __init__.py  base_agent.py  math_agent.py  multi_agent_system.py  research_agent.py  supervisor_agent.py
src/lclg/supervisor-multi-agent/src/prompts/: __init__.py  prompts.py
src/prompt_xml_strategies/: __init__.py  cli.py
src/prompt_xml_strategies/core/: __init__.py  base_strategy_pipeline.py  exceptions.py  json_to_xml_transformer.py  pipeline.py  prompt_context.py  prompt_strategy.py  response_parser.py  response_schema_builder.py  sample_strategy_pipeline.py  schema_enforcer.py  schema_validator.py  strategy_manager.py  strategy_pipeline_interface.py  strategy_registry.py  xml_builder.py  xsd_validator.py
src/prompt_xml_strategies/llm_clients/: __init__.py  anthropic_client.py  base_client.py  ollama_client.py  openwebui_client.py
src/prompt_xml_strategies/prompt_strategies/: __init__.py  interface.py  simple_prompt_strategy.py
src/prompt_xml_strategies/response_strategies/: __init__.py  interface.py  simple_response_strategy.py
src/prompt_xml_strategies/xml_output_strategies/: __init__.py  interface.py  simple_xml_strategy.py
tests/unit/: test_ollama_client.py  test_openwebui_client.py  test_pipeline.py  test_prompt_strategy.py  test_schema_validator.py  test_simple_strategies.py  test_strategy_manager.py
(+25 files in other folders)
